introduce other generalizations early on

--- a/writing/spp/generics-spp.tex
+++ b/writing/spp/generics-spp.tex
@@ -62,17 +62,24 @@
 \maketitle
 
 Learning and development require solving problems of induction.
-These are hard problems though they can be solved by adults and young children by learning from observations \cite{Markman1989} 
-and in pedagogically enriched scenarios \emph{(CITE SOME PEDAGOGY?}).
+To know that swans are white, one must generalize the property \textsc{is white} to the category of swans.
+Similarly, it is useful to generalize particular events (e.g. \textsc{bill smoking a cigarette}) over time (e.g. \textsc{bill smokes cigarettes}), and generalize a cause that occurred in a particular place at a particular time (e.g. \textsc{bill's cancer was caused by smoking}) to a causal relationship that occurs invariant of space and time (e.g. \textsc{smoking causes cancer}).
+Making such generalizations is tricky though can be achieved by adults and young children by learning from evidence
+and, particularly so, in pedagogically enriched contexts \cite{Markman1989, Shafto2012}.
+The task is made almost trivial, though, if the generalization is communicated with language (e.g. somebody tells you: \emph{Swans are white.}).
 %At about age of the two, a new tool for communication and learning becomes available: language.
-Generalizations may also be conveyed with language.
-Generic language (e.g.~\emph{Swans are white.}) provides a simple and ubiquitous way to communicate generalizations \cite{Carlson1977, Leslie2008}. 
-Generic language is ubiquitous in everyday conversation and in child-directed speech \cite{Gelman2008} and children as young as two or three understand that generics refer to categories and support generalization \cite{Cimpian2008}.
-%Generalizations are central to human understanding and thus, it is not surprising that language provides . 
-%Generics are ubiquitous in everyday conversation as well as in child-directed speech 
-Learning through generic statements is thought to be essential to the growth of conceptual knowledge \cite{Gelman2004} and how kinds are represented in the mind \cite{Leslie2008}, and yet a formal account of the meaning of generic sentences remains elusive. 
+%Generalizations can be made about the properties of a category (e.g. \emph{Dogs are friendly}),
+%events that tend to occur 
+%and about causal relationships that tend to hold 
+%Generalizations may also be conveyed with language.
+Generic (e.g.~\emph{Swans are white}), habitual (e.g.~\emph{Bill smokes cigarettes}), and causal (e.g.~\emph{Smoking causes cancer}) languages provide common and simple ways to communicate generalizations about categories, events, and causal relationships, respectively \cite{Carlson1977, Carlson2005, Cohen1999, Leslie2008}. 
+%We take category generalizations as our primary case study, extend our analysis to habitual language later, and speculate on causal language at the end. 
+%Generic language is ubiquitous in everyday conversation and in child-directed speech \cite{Gelman2008} and children as young as two or three understand that generics refer to categories and support generalization \cite{Cimpian2008}.
+Learning through generic statements is thought to be essential to the growth of conceptual knowledge \cite{Gelman2004} and how kinds are represented in the mind \cite{Leslie2008}.
+%Similar processes may be occurring for habitual language with respect to drawing inferences about stable properties of individuals \cite{Gelman1999}.
+Despite the apparent simplicity of the language and their centrality to learning, a formal account of the generic meaning remains elusive. 
 
-The primary hurdle in formalizing generic language is in determine what makes a generic sentence true or false (i.e. the truth conditions).
+The primary hurdle in formalizing generic language is in determining what makes a generic sentence true or false (i.e. the truth conditions).
 %Generics look a lot like quantifier statements (e.g. \emph{some, all, most}).
 At first blush, generics look a lot like universally quantified statements as in \emph{All swans are white}, and yet generics---unlike universals---admit exceptions (e.g. there are black swans). 
 Interpreting the generic as meaning ``most'' (i.e. \emph{Most swans are white}) captures many cases but fails to account for others: \emph{Robins lay eggs} seems true even though only adult, female robins do; only a tiny fraction of Mosquitos carry the virus Zika yet \emph{Mosquitos carry Zika} also sounds true. 
@@ -82,14 +89,15 @@ In fact, the very notion that the felicity of the generic can be tied to how man
 %Bill may smoke a pack a day and so we would say \emph{Bill smokes}, and if Bill goes without a cigarette for an entire family vacation (thus temporarily reducing his effective rate of smoking), we will not be so easily convinced (i.e. \emph{Bill smokes} is probably still true).
 %Cases like \emph{Mosquitos carry malaria} (wherein only a tiny percentage have the property) seem to parallel habitual sentences of rare actions like \emph{Susan writes novels}. Susan may only have written 3 novels in her life, but still this seems like a valid generalization to convey.
 
-We argue that the core meaning of a generic sentence is simple but underspecified, and that general principles of pragmatic reasoning are responsible for establishing a precise meaning in context. 
+We argue that the core meaning of a generic and habitual sentences is simple but underspecified, and that general principles of pragmatic reasoning are responsible for establishing a precise meaning in context. 
 Building on recent probabilistic models of language understanding, we provide a formal model for the evaluation of generic sentences. 
 This model explains the puzzling flexibility in truth conditions in terms of diverse prior beliefs about properties.
 In Experiment 1, we elicit these priors experimentally and show that the resulting model predictions explain almost all of the variance in human truth judgments for familiar  generic sentences.
-Generalizations about categories, however, are just one kind of generalization.
-Habitual sentences describe generalizations about events (e.g. \emph{Bill smokes}, \emph{Susan mows her neighbor's lawn.}; \citeNP{Carlson1977, Carlson2005, Cohen1999}). 
-Experiment 2 provides more support that this theory describes communicating generalizations in general by using an almost identical paradigm to predict the truth judgments for habitual sentences.
+Experiment 2 strengthens the argument by using an almost identical paradigm to predict the truth judgments for habitual sentences.
 Finally, using habitual language, we show in Experiment 3 that communicating generalizations is sensitive to top-down moderators of expectations: It is the subjective belief of future behavior (not just what has been observed objectively in the past) that matters for communicating generalizations.
+%Generalizations about categories, however, are just one kind of generalization.
+%Habitual sentences describe generalizations about events (e.g. \emph{Bill smokes}, \emph{Susan mows her neighbor's lawn.}; \citeNP{Carlson1977, Carlson2005, Cohen1999}). 
+
 
 \subsubsection*{A formal model of generic meaning}
 
