try again on first graf

--- a/writing/spp/generics-spp.tex
+++ b/writing/spp/generics-spp.tex
@@ -53,20 +53,29 @@
 {0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
 
 \title{Talking in generalizations}
-\author{{\large \bf Michael Henry Tessler} and {\large \bf Noah D. Goodman} \\
-\{mtessler, ngoodman\} @stanford.edu\\
-  Department of Psychology, Stanford University}
+%\author{{\large \bf Michael Henry Tessler} and {\large \bf Noah D. Goodman} \\
+%\{mtessler, ngoodman\} @stanford.edu\\
+%  Department of Psychology, Stanford University}
 
 \begin{document}
 
 \maketitle
 
 Learning and development require solving problems of induction.
-To know that swans are white, one must generalize the property \textsc{is white} to the category of swans.
-Similarly, it is useful to generalize particular events (e.g. \textsc{bill smoking a cigarette}) over time (e.g. \textsc{bill smokes cigarettes}), and generalize a cause that occurred in a particular place at a particular time (e.g. \textsc{bill's cancer was caused by smoking}) to a causal relationship that occurs invariant of space and time (e.g. \textsc{smoking causes cancer}).
-Making such generalizations is tricky though can be achieved by adults and young children by learning from evidence
-and, particularly so, in pedagogically enriched contexts \cite{Markman1989, Shafto2012}.
-The task is made almost trivial, though, if the generalization is communicated with language (e.g. somebody tells you: \emph{Swans are white.}).
+To understand that swans are white, one must generalize the property \textsc{is white} to the category of swans.
+This can be done by observing white swans or by being presented in a pedagogical manner with the same evidence \cite{Markman1989, Shafto2012}.
+More to the point, a helpful interlocutor could just tell you \emph{Swans are white}. 
+This \emph{generic} sentence is a simple and convenient way to communicate the generalization \cite{Carlson1977, Leslie2008}. 
+Similar simple sentences are used to communication generalizations about events--- these are called \emph{habituals} (e.g. \emph{Bill smokes cigarettes} generalizes the event of Bill smoking a cigarette over time; \citeNP{Carlson2005, Cohen1999}). 
+Statements about causality can be thought of as generalizing a particular cause--effect instance (e.g. Bill getting cancer as a result of smoking) over time and space  (e.g. \emph{Smoking causes cancer}).
+%and generalizations about causes---\emph{causals}generalizes over the instances where smoking was the cause of a cancer).
+
+%Similarly, it is useful to generalize particular events (e.g. \textsc{bill smoking a cigarette}) over time (e.g. \textsc{bill smokes cigarettes}), and generalize a cause that occurred in a particular place at a particular time (e.g. \textsc{bill's cancer was caused by smoking}) to a causal relationship that occurs invariant of space and time (e.g. \textsc{smoking causes cancer}).
+%Making such generalizations is tricky though can be achieved by adults and young children by learning from evidence
+%and, particularly so, in pedagogically enriched contexts \cite{Markman1989, Shafto2012}.
+%The task is made almost trivial, though, if the generalization is communicated with language (e.g. somebody tells you: \emph{Swans are white.}).
+
+
 %At about age of the two, a new tool for communication and learning becomes available: language.
 %Generalizations can be made about the properties of a category (e.g. \emph{Dogs are friendly}),
 %events that tend to occur 
