--- a/writing/spp/generics-spp.tex
+++ b/writing/spp/generics-spp.tex
@@ -63,11 +63,11 @@
 
 Learning and development require solving problems of induction.
 To understand that swans are white, one must generalize the property \textsc{is white} to the category of swans.
-This can be done by observing white swans or by being presented in a pedagogical manner with the same evidence \cite{Markman1989, Shafto2012}.
+This hard problem can be overcome by young children by merely observing instances of the category \cite{Markman1989} or by being shown the same evidence pedagogically \cite<e.g.>{Shafto2012}.
 More to the point, a helpful interlocutor could just tell you \emph{Swans are white}. 
 This \emph{generic} sentence is a simple and convenient way to communicate the generalization \cite{Carlson1977, Leslie2008}. 
-Similar simple sentences are used to communication generalizations about events--- these are called \emph{habituals} (e.g. \emph{Bill smokes cigarettes} generalizes the event of Bill smoking a cigarette over time; \citeNP{Carlson2005, Cohen1999}). 
-Statements about causality can be thought of as generalizing a particular cause--effect instance (e.g. Bill getting cancer as a result of smoking) over time and space  (e.g. \emph{Smoking causes cancer}).
+Similar, simple sentences are used to communication generalizations about events, called \emph{habituals} (e.g.  Bill smoking a cigarette can be generalized over time with \emph{Bill smokes cigarettes}; \citeNP{Carlson2005, Cohen1999}). 
+Even statements about causality can be thought of as generalizing a particular cause--effect instance (e.g. Bill getting cancer as a result of smoking) over time and space  (e.g. \emph{Smoking causes cancer}).
 %and generalizations about causes---\emph{causals}generalizes over the instances where smoking was the cause of a cancer).
 
 %Similarly, it is useful to generalize particular events (e.g. \textsc{bill smoking a cigarette}) over time (e.g. \textsc{bill smokes cigarettes}), and generalize a cause that occurred in a particular place at a particular time (e.g. \textsc{bill's cancer was caused by smoking}) to a causal relationship that occurs invariant of space and time (e.g. \textsc{smoking causes cancer}).
@@ -81,10 +81,10 @@ Statements about causality can be thought of as generalizing a particular cause-
 %events that tend to occur 
 %and about causal relationships that tend to hold 
 %Generalizations may also be conveyed with language.
-Generic (e.g.~\emph{Swans are white}), habitual (e.g.~\emph{Bill smokes cigarettes}), and causal (e.g.~\emph{Smoking causes cancer}) languages provide common and simple ways to communicate generalizations about categories, events, and causal relationships, respectively \cite{Carlson1977, Carlson2005, Cohen1999, Leslie2008}. 
+Generic (e.g.~\emph{Swans are white}), habitual (e.g.~\emph{Bill smokes cigarettes}), and causal (e.g.~\emph{Smoking causes cancer}) language provide common and simple ways to communicate generalizations. 
 %We take category generalizations as our primary case study, extend our analysis to habitual language later, and speculate on causal language at the end. 
 %Generic language is ubiquitous in everyday conversation and in child-directed speech \cite{Gelman2008} and children as young as two or three understand that generics refer to categories and support generalization \cite{Cimpian2008}.
-Learning through generic statements is thought to be essential to the growth of conceptual knowledge \cite{Gelman2004} and how kinds are represented in the mind \cite{Leslie2008}.
+Learning through generic statements, in particular, is thought to be essential to the growth of conceptual knowledge \cite{Gelman2004} and how kinds are represented in the mind \cite{Leslie2008}.
 %Similar processes may be occurring for habitual language with respect to drawing inferences about stable properties of individuals \cite{Gelman1999}.
 Despite the apparent simplicity of the language and their centrality to learning, a formal account of the generic meaning remains elusive. 
 
@@ -92,17 +92,17 @@ The primary hurdle in formalizing generic language is in determining what makes 
 %Generics look a lot like quantifier statements (e.g. \emph{some, all, most}).
 At first blush, generics look a lot like universally quantified statements as in \emph{All swans are white}, and yet generics---unlike universals---admit exceptions (e.g. there are black swans). 
 Interpreting the generic as meaning ``most'' (i.e. \emph{Most swans are white}) captures many cases but fails to account for others: \emph{Robins lay eggs} seems true even though only adult, female robins do; only a tiny fraction of Mosquitos carry the virus Zika yet \emph{Mosquitos carry Zika} also sounds true. 
-In fact, the very notion that the felicity of the generic can be tied to how many instances have the property (in the way that quantifier statements are) violates intuitions: \emph{Robins lay eggs} even though only the females do but \emph{Robins are female} (even though only the females are) is not a reasonable utterance.
+In fact, the very notion that the felicity of the generic can be tied to how many instances have the property (in the way that quantifier statements are) violates intuitions: \emph{Robins lay eggs} even though only the females do but \emph{Robins are female} (even though only the females are) is not a reasonable thing to say.
 
 %Habitual sentences behave in an analogous way. 
 %Bill may smoke a pack a day and so we would say \emph{Bill smokes}, and if Bill goes without a cigarette for an entire family vacation (thus temporarily reducing his effective rate of smoking), we will not be so easily convinced (i.e. \emph{Bill smokes} is probably still true).
 %Cases like \emph{Mosquitos carry malaria} (wherein only a tiny percentage have the property) seem to parallel habitual sentences of rare actions like \emph{Susan writes novels}. Susan may only have written 3 novels in her life, but still this seems like a valid generalization to convey.
 
-We argue that the core meaning of a generic and habitual sentences is simple but underspecified, and that general principles of pragmatic reasoning are responsible for establishing a precise meaning in context. 
-Building on recent probabilistic models of language understanding, we provide a formal model for the evaluation of generic sentences. 
-This model explains the puzzling flexibility in truth conditions in terms of diverse prior beliefs about properties.
-In Experiment 1, we elicit these priors experimentally and show that the resulting model predictions explain almost all of the variance in human truth judgments for familiar  generic sentences.
-Experiment 2 strengthens the argument by using an almost identical paradigm to predict the truth judgments for habitual sentences.
+We argue that the core meaning of generic and habitual sentences is simple but underspecified, and that general principles of pragmatic reasoning are responsible for establishing a precise meaning in context. 
+Building on recent probabilistic models of language understanding, we provide a formal model for the evaluation of generic sentences, which should in principle generalize to other generalizations conveyed in language (e.g. habituals, causals). 
+This model explains the puzzling flexibility in truth conditions (e.g. \emph{Birds lay eggs} vs. \emph{Birds are female}; \emph{Mosquitos carry Zika}) in terms of diverse prior beliefs about properties.
+In Experiment 1, we elicit these priors experimentally and show that the resulting model predictions explain almost all of the variance in human truth judgments for familiar generic sentences.
+Experiment 2 demonstrates that the same model accounts for truth judgments for a wide range of habitual sentences, where frequency alone would fail.
 Finally, using habitual language, we show in Experiment 3 that communicating generalizations is sensitive to top-down moderators of expectations: It is the subjective belief of future behavior (not just what has been observed objectively in the past) that matters for communicating generalizations.
 %Generalizations about categories, however, are just one kind of generalization.
 %Habitual sentences describe generalizations about events (e.g. \emph{Bill smokes}, \emph{Susan mows her neighbor's lawn.}; \citeNP{Carlson1977, Carlson2005, Cohen1999}). 
@@ -111,10 +111,11 @@ Finally, using habitual language, we show in Experiment 3 that communicating gen
 \subsubsection*{A formal model of generic meaning}
 
 Generics express a relation between a kind (e.g. \textsc{robins}) and a property (e.g. \textsc{lays eggs}). 
-For a given kind $K$ (e.g.~\textsc{robins}) and property $F$ (e.g.~\textsc{lays eggs}), we refer to the probability that an object of kind $K$ has property $F$, that is $P(F\mid K)$, as the \emph{prevalence} of $F$ within $K$.\footnote{Because we aim to explain the psycholinguistics of generics, we are generally interested in the subjective probability, not the actual frequency in the world.}
+For a given kind $K$ (e.g.~\textsc{robins}) and property $F$ (e.g.~\textsc{lays eggs}), we refer to the probability that an object of kind $K$ has property $F$, that is $P(F\mid K)$, as the \emph{prevalence} of $F$ within $K$.
+\footnote{Because we aim to explain the psycholinguistics of generics, we are generally interested in the subjective probability, not the actual frequency in the world.}
 Logical quantifiers can be described as conditions on prevalence (i.e.~\emph{some} is $P(F\mid K)>0$, \emph{all} is $P(F\mid K)=1$). 
 Extending this, it seems the simplest meaning for generic statements would be a similar threshold on prevalence: $P(F\mid K)>\tau$ \cite{Cohen1999}. 
-However, no fixed value of the threshold, $\tau$, would allow for the extreme flexibility generics exhibit (e.g. \emph{Robins lay eggs} vs. \emph{Robins are female}; \emph{Mosquitos carry malaria}).
+However, no fixed value of the threshold, $\tau$, would allow for the extreme flexibility generics exhibit (e.g. \emph{Robins lay eggs} vs. \emph{Robins are female}; \emph{Mosquitos carry Zika}).
 Building on \citeA{Lassiter2013,Lassiter2015}, we posit that this threshold is not a fixed property of the language, but is established by pragmatic inference.
 
 Using the Rational Speech-Acts framework \cite{Frank2012,Goodman2013}, 
@@ -131,10 +132,10 @@ P_{L_{0}}(x \mid u, \tau) &\propto& {\delta_{\denote{u}(x, \tau)} P(x)}. \label{
 %
 We take the pragmatic speaker $S_2$ to consider two utterances: the generic, with $\denote{u}(x, \tau) := x>\tau$, or nothing (staying silent), with $\denote{u}(x, \tau) := \text{True}$.
 Equation \ref{eq:S2} can then be interpreted as a model of felicity or truth judgments \cite{Degen2014, TesslerUnderReview}.
-The speaker will choose to produce the habitual when the true prevalence $x$ is more likely under $L_1$'s posterior given the generic than under her prior (implied by $S_2$ ``staying silent''). 
+The speaker will choose to produce the generic when the true prevalence $x$ is more likely under $L_1$'s posterior given the generic than under her prior (implied by $S_2$ ``staying silent''). 
 A fully implemented version of the model can be found at \url{http://forestdb.org/models/generics.html}.
 
-This model can be straightforwardly adopted to describe generalizations about events (e.g.~\emph{Bill smokes}), by specifying the underlying scale to be the rate with which a person does an action, or that person's \emph{propensity} of doing the action (e.g. Bill smokes cigarettes 4 times a day.) rather than the prevalence of the property. 
+This model is straightforwardly adapted to describe generalizations about events (e.g.~\emph{Bill smokes}), by specifying the underlying scale to be the rate with which a person does an action, or that person's \emph{propensity} of doing the action (e.g. Bill smokes cigarettes 4 times a day.) rather than the prevalence of the property. 
 The rest of the model is the same.
 
 
@@ -145,20 +146,34 @@ The rest of the model is the same.
 
 \subsubsection*{Summary of experiments and results}
 
+\begin{figure}[t]
+\centering
+  \includegraphics[width=0.75\textwidth]{tj-2x2}
+  \caption{Human acceptability judgments for generic (top) and habitual (bottom) sentences vs. Left: the prevalence of the property measured in Expt.~1 (e.g.~50\% of robins are female) and log frequency of action given to the participant in Expt.~2 (e.g. Last month, Bill smoked cigarettes 3 times), and 
+  Right: speaker $S_2$ (Eq.~\ref{eq:S2}) model predictions.
+%  and speaker $S_2$ model predictions (right) for ninety-three unique items (event \textsc{x} frequency). 
+  Color denotes target-category prevalence and target-individual frequency of action, with lighter colors indicating more prevalent properties and more frequent actions. 
+%  Actual frequency noted on x-axis for examples (left).
+  Error bars correspond to 95\% bootstrapped confidence intervals for the human data and 95\% Bayesian credible intervals for the model predictions. 
+  Error bars suppressed and points jittered on bottom, left facet for visual clarity.}
+  \label{fig:tj}
+\end{figure}
+
 
 In three experiments, we test the felicity of various generic and habitual sentences, and compare the speaker model in Eq.~\ref{eq:S2} to the human truth judgments. 
 Experiment 1 ($n=100$) uses generic sentences of familiar categories (e.g.~\emph{Birds lay eggs}; \emph{Birds are female}) with no further information present.
 Experiment 2 ($n=150$) uses habitual sentences of novel characters (e.g.~\emph{Bill smokes cigarettes}) and presents information about the frequency with which the event has occurred in the past (e.g. Last week, Bill smoked cigarettes 3 times.). 
 For both of the experiments, we measure empirically the prior distribution $P(x)$ over prevalence ($n=60$) or propensity ($n=40$), respectively.
 %In both Experiment 1 and Experiment 2, we use the empirically elicited priors and the speaker $S_2$ model to predict the truth judgments of generic and habitual sentences, respectively. 
-In both cases, the speaker $S_2$ model explains almost all of the variance in human endorsements of generic and habitual sentences ($r^2(30) = 0.98$ and $r^2(93) = 0.94$, respectively) while using just the prevalence \emph{within} the particular category or the just propensity for the particular person explains relatively little of the data ($r^2(30) = 0.59$ and $r^2(93) = 0.33$).
+In both cases, the speaker $S_2$ model explains almost all of the variance in human endorsements of generic and habitual sentences ($r^2(30) = 0.98$ and $r^2(93) = 0.94$, respectively; Figure \ref{fig:tj} Right facets) while using just the prevalence \emph{within} the particular category or the just propensity for the particular person explains relatively little of the data ($r^2(30) = 0.59$ and $r^2(93) = 0.33$; Figure \ref{fig:tj} Left facets).
 
 In Experiment 3, we present participants with the same stimuli as in Expt.~2 and include extra information that either enables (e.g. Yesterday, Bill bought a pack of cigarettes.) or disables (e.g. Yesterday, Bill decided to quit smoking) the event from occurring. 
-We measure participants' predictions ($n=120$) about the future frequency with which the target person will do the action (e.g. ``In the next week, how many times will be smoke cigarettes?'') and a set of different participants ($n=150$) rated the felicity of the habitual sentence. 
+We measure participants' predictions ($n=120$) about the future frequency with which the target person will do the action (e.g. ``In the next week, how many times will Bill smoke cigarettes?'') and a set of different participants ($n=150$) rated the felicity of the habitual sentence. 
 The speaker model $S_2$ who attempts to communicate the past frequency explains almost none of the data $r^2(63)=0.02$ while the model that wants to communicate the future frequency explains much of the data $r^2(63)=0.91$.
-We also find that when no additional information is present, predicted frequency perfectly tracks past frequency (and so the two models have the same predictions for the data from Expt.~2).
+We also find that when no additional information is present, predicted frequency perfectly tracks past frequency (and so the two models have the same predictions for the data in Expt.~2).
 
 In sum, our model that decides if a generic sentence is a pragmatically useful way to describe a category (or if a habitual is a useful way to describe an individual's behavior) by taking into account the listener's prior beliefs about the property (or event)---how common it is and the likely prevalence (measured empirically)---explains the puzzling flexibility of truth conditions for generic and habitual language.
+This work provides a mathematical bridge between our intuitive theories of category's and people's behavior, and the words we use to describe them.
 %We validated this model by eliciting felicity judgments for generic and habitual sentences covering diverse properties and activities (Expt.~1b, 2b).
 %To our knowledge, the experiments presented here are first empirical investigations into the truth conditions of habitual sentences and the first test of a formal model of habitual language.
 
